# docs/api.yaml
@@ -173,7 +173,7 @@ paths:
                     example: 401
                   message:
                     type: string
-                    example: 'Invalid credentials.'
+                    example: 'Invalid credentials..'
         '404':
           description: User not found
           content:
@@ -205,39 +205,33 @@ paths:
             schema:
               type: object
               properties:
-                username:
+                title:
                   type: string
-                  description: 'Username for the new user'
-                  example: 'johndoe'
-                email:
+                  description: 'Title for the new task'
+                  example: 'Some title'
+                  minLength: 3
+                  maxLength: 100
+                description:
                   type: string
-                  description: 'Email address for the new user'
-                  example: 'johndoe@example.com'
-                password:
+                  description: 'Description of the task (optional)'
+                  example: 'Some description'
+                  maxLength: 500
+                  nullable: true
+                status:
                   type: string
-                  description: 'Password for the new user'
-                  example: 'Password123'
-                name:
-                  type: string
-                  description: 'Full name of the new user'
-                  example: 'John Doe'
-                birthdate:
+                  description: 'Status of the new task'
+                  enum: ['pending', 'in_progress', 'completed']
+                  example: 'pending'
+                dueDate:
                   type: string
                   format: date
-                  description: 'Birthdate of the new user'
-                  example: '1990-01-01'
-                gender:
-                  type: string
-                  enum: [male, female, unknown]
-                  description: 'Gender of the new user'
-                  example: 'male'
+                  description: 'Due date of the new task (optional, nullable)'
+                  example: '2022-01-01'
+                  nullable: true
               required:
-                - username
-                - email
-                - password
-                - name
-                - birthdate
-                - gender
+                - title
+                - status
+
       responses:
         '201':
           description: User created successfully
@@ -478,6 +472,104 @@ paths:
                     type: string
                     example: 'Task not found or not authorized to delete.'
 
+    put:
+      summary: Update a task by ID
+      description: Update a task by its unique ID, ensuring that the task belongs to the authenticated user.
+      security:
+        - accessToken: [] # Requires accessToken for authentication
+      parameters:
+        - in: path
+          name: taskId
+          required: true
+          description: ID of the task to delete
+          schema:
+            type: string
+            example: '66fd11097117de26aae7cedf'
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  description: 'Title for the new task'
+                  example: 'Some title'
+                  minLength: 3
+                  maxLength: 100
+                description:
+                  type: string
+                  description: 'Description of the task (optional)'
+                  example: 'Some description'
+                  maxLength: 500
+                  nullable: true
+                status:
+                  type: string
+                  description: 'Status of the new task'
+                  enum: ['pending', 'in_progress', 'completed']
+                  example: 'pending'
+                dueDate:
+                  type: string
+                  format: date
+                  description: 'Due date of the new task (optional, nullable)'
+                  example: '2022-01-01'
+                  nullable: true
+
+      responses:
+        '200':
+          description: Task deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: true
+                  code:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: 'Task deleted successfully.'
+        '400':
+          description: Missing task ID
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                  code:
+                    type: integer
+                    example: 400
+                  message:
+                    type: string
+                    example: 'Missing task id.'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+
+        '404':
+          description: Task not found or not authorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                  code:
+                    type: integer
+                    example: 404
+                  message:
+                    type: string
+                    example: 'Task not found or not authorized to delete.'
+
 components:
   securitySchemes:
     accessToken:
@@ -488,7 +580,7 @@ components:
 
   responses:
     UnauthorizedError:
-      description: Unauthorized request due to missing or invalid credentials.
+      description: Unauthorized request due to missing or Invalid credentials..
       content:
         application/json:
           schema:
